# M0609_LEGO

./: .gitignore
D3_lego_src/: READ.md
D3_lego_src/lego_admin_ui/: app.py  config.py
D3_lego_src/lego_admin_ui/.claude/: settings.local.json
D3_lego_src/lego_admin_ui/api/: action_api.py  camera_api.py  robot_api.py  task_api.py
D3_lego_src/lego_admin_ui/database/: __init__.py  connection.py  init_db.py  models.py
D3_lego_src/lego_admin_ui/process/: process_manager.py
D3_lego_src/lego_admin_ui/ros/: cam_state.py  camera_node.py  hand_node.py  hand_state.py  ros_thread.py  voice_node.py  voice_state.py
D3_lego_src/lego_admin_ui/services/: automation_service.py  go_home_service.py  pick_service.py  place_service.py  robot_log_service.py  robot_recovery_service.py  stop_service.py
D3_lego_src/lego_admin_ui/state/: robot_state.py
D3_lego_src/lego_admin_ui/templates/: index.html
D3_lego_src/lego_admin_ui/utils/: geometry.py
D3_lego_src/lego_admin_ui/voice/: voice_tts.py
D3_lego_src/lego_customer_ui/: app.py
D3_lego_src/lego_customer_ui/.claude/: settings.local.json
D3_lego_src/lego_customer_ui/camera/: __init__.py  (+4 more)
D3_lego_src/pick_block/: package.xml  setup.cfg  setup.py
D3_lego_src/place_block/: package.xml  setup.cfg  setup.py
D3_lego_src/place_block/config/: blocks.json  blocks1.json  board_calibration.yaml
D3_lego_src/place_block/place_block/: onrobot.py  place_block_node.py  place_block_node_v1(통합후).py
D3_lego_src/robot_base_motion/: package.xml  setup.cfg  setup.py
D3_lego_src/robot_perception_stack/: package.xml  setup.cfg  setup.py
(+20 files in other folders)
