<?xml version="1.0"?>
<package format="3">
  <name>place_block</name>
  <version>0.0.0</version>
  <description>Doosan M0609 block picker using 24x24 grid JSON and calibration file</description>

  <maintainer email="20201124@edu.hanbat.ac.kr">seongho</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>ament_index_python</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>od_msg</depend>

  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-scipy</exec_depend>
  <exec_depend>python3-yaml</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
